...
final class EditNoteViewModel: ObservableObject {
    
    private let noteId: UUID
    private let noteLoader: NoteLoader
    private let noteUpdater: NoteUpdater
    
    @Published var title = "Edit Note"
    @Published var isLoading = false
    
    @Published var shouldShowErrorAlert = false
    @Published var errorTitle = ""
    @Published var errorMessage = ""
    
...
        )
        
        return noteToUpdate
    }
    
    private func handleOnSaveSuccess() {
        successUpdateTitle = "Update Sukses"
        successUpdateMessage = "Berhasil mengupdate note"
        shouldShowSuccessUpdateAlert = true
    }
    
    private func handleOnSaveFailure(_ error: NoteUpdaterError) {
        switch error {
...
