...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Notes-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="NoteListViewController" id="BYZ-38-t0r" customClass="NoteListViewController" customModule="Notes" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="8Qm-fJ-Ssn">
                                <rect key="frame" x="0.0" y="360" width="414" height="502"/>
...
                        <rightBarButtonItems>
                            <barButtonItem title="Add" image="plus" catalog="system" id="WV0-MP-3Pd">
                                <connections>
                                    <action selector="didTapAddButton:" destination="BYZ-38-t0r" id="QTc-k6-chx"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="Delete" image="trash" catalog="system" id="OuK-bj-hDk">
                                <connections>
                                    <action selector="didTapDeleteAllButton:" destination="BYZ-38-t0r" id="qi4-sJ-49H"/>
                                </connections>
                            </barButtonItem>
                        </rightBarButtonItems>
                    </navigationItem>
...
